# CXLSim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
def/: cxl_params.in  io.param.def  io.stat.def  port.param.def
scripts/: knobgen.pl  statgen.pl  tracegen.py
src/: CMakeLists.txt  Callback.h  all_knobs.cc  all_knobs.h  all_stats.cc  all_stats.h  assert_macros.h  cache.cc  cache.h  core.cc  core.h  cxl_t3.cc  cxl_t3.h  cxlsim.cc  cxlsim.h  global_defs.h  global_types.h  knob.cc  knob.h  main.cc  packet_info.cc  packet_info.h  pcie_endpoint.cc  pcie_endpoint.h  pcie_rc.cc  pcie_rc.h  pcie_vcbuff.cc  pcie_vcbuff.h  port.cc  port.h  ramulator_wrapper.cc  ramulator_wrapper.h  statistics.cc  statistics.h  statsEnums.h  uop.cc  uop.h  utils.h
stats/: io.stat.out
trace/: sample.txt
